--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,20 @@ body {
 
 h1 {
   text-align: center;
+  padding: 3.125rem;
+}
+
+footer {
+  text-align: center;
+  padding: 2.5rem 0rem;
 }
 
 .gallery_container {
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 15.625rem;
+  grid-auto-rows: 18.75rem;
   padding: 20px;
   grid-gap: 0.625rem;
 }
@@ -28,4 +34,6 @@ h1 {
   object-fit: cover;
 }
 
-.gallery_item: nth-child();
+.gallery_item:nth-child(1) {
+  grid-row-start: span 2;
+}
