--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,55 @@ footer {
   height: 100%;
   object-fit: cover;
 }
+
+.gallery_item:nth-child(1) {
+  grid-row-start: span 2;
+}
+.gallery_item:nth-child(2) {
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(4) {
+  grid-row-start: span 2;
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(9) {
+  grid-row-start: span 2;
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(12) {
+  grid-row-start: span 2;
+}
+.gallery_item:nth-child(16) {
+  grid-row-start: span 2;
+}
+.gallery_item:nth-child(17) {
+  grid-row-start: span 2;
+  grid-column-start: span 3;
+}
+.gallery_item:nth-child(18) {
+  grid-row-start: span 2;
+}
+.gallery_item:nth-child(21) {
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(22) {
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(23) {
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(26) {
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(27) {
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(28) {
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(29) {
+  grid-column-start: span 2;
+}
+.gallery_item:nth-child(30) {
+  grid-column-start: span 2;
+}
