--- a/styles.css
+++ b/styles.css
@@ -4,22 +4,35 @@
 
 body {
   margin: 0;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Poppins";
+  background-color: rgb(245, 245, 245);
 }
 
 h1 {
+  font-size: 3rem;
   text-align: center;
-  padding: 3.125rem;
+  padding: 1.875rem;
+  text-transform: uppercase;
+  color: white;
+  text-shadow: -1px 2px 10px black;
+  letter-spacing: 10px;
+  opacity: 0.5;
 }
 
 footer {
   text-align: center;
   padding: 2.5rem 0rem;
 }
+.container_index {
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 10px;
+  background: white;
+  box-shadow: 8px 8px 20px rgba(0, 0, 0, 0.5);
+}
 
 .gallery_container {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -32,6 +45,30 @@ footer {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.gallery_item {
+  overflow: hidden;
+  position: relative;
+}
+
+.gallery_item .title_img {
+  width: 0%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: left;
+  align-items: flex-end;
+  text-align: center;
+  color: white;
+  background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 1));
+  overflow: hidden;
+}
+
+.gallery_item:hover .title_img {
+  width: 100%;
+  height: 100%;
+  padding: 1.5625rem 0.3125rem;
 }
 
 .gallery_item:nth-child(1) {
