Responsive_1366px&1280px_added_13.03.2024

--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,16 @@ footer {
 .gallery_item:nth-child(30) {
   grid-column-start: span 2;
 }
+@media (max-width: 1366px) {
+  .gallery_container {
+    grid-auto-rows: 250px;
+  }
+  .container_index {
+    width: 95%;
+  }
+}
+@media (max-width: 1280px) {
+  .gallery_container {
+    grid-auto-rows: 200px;
+  }
+}
