--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,76 @@ footer {
     grid-auto-rows: 200px;
   }
 }
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 2.5rem;
+    padding: 0.9375rem;
+  }
+  .gallery_container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 160px;
+  }
+  .gallery_item:nth-child(1) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(3) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(4) {
+    grid-row-start: span 3;
+  }
+  .gallery_item:nth-child(5) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(6) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(7) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(8) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(9) {
+    grid-column-start: span 2;
+    grid-row-start: span 3;
+  }
+  .gallery_item:nth-child(12) {
+    grid-row-start: span 3;
+  }
+  .gallery_item:nth-child(13) {
+    grid-row-start: span 3;
+    grid-column-start: span 2;
+  }
+  .gallery_item:nth-child(18) {
+    grid-row-start: span 3;
+  }
+  .gallery_item:nth-child(19) {
+    grid-column-start: span 2;
+  }
+  .gallery_item:nth-child(20) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(22) {
+    grid-column-start: span 3;
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(23) {
+    grid-column-start: span 1;
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(24) {
+    grid-row-start: span 2;
+    grid-column-start: span 3;
+  }
+  .gallery_item:nth-child(25) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(28) {
+    grid-column-start: span 2;
+    grid-row-start: span 3;
+  }
+  .gallery_item:nth-child(30) {
+    grid-row-start: span 2;
+  }
+}
