--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,44 @@ footer {
     grid-row-start: span 2;
   }
 }
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.8rem;
+    padding: 1.25rem;
+  }
+
+  .gallery_container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 160px;
+  }
+  .gallery_item:nth-child(2) {
+    grid-column-start: span 2;
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(14) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(15) {
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(21) {
+    grid-column-start: span 1;
+    grid-row-start: span 2;
+  }
+  .gallery_item:nth-child(23) {
+    grid-row-start: span 2;
+    grid-column-start: span 1;
+  }
+  .gallery_item:nth-child(24) {
+    grid-row-start: span 2;
+    grid-column-start: span 2;
+  }
+  .gallery_item:nth-child(28) {
+    grid-row-start: span 1;
+    grid-column-start: span 1;
+  }
+  .gallery_item:nth-child(30) {
+    grid-row-start: span 2;
+    grid-column-start: span 3;
+  }
+}
